syntax = "proto3";

package platform.v1;

import "google/protobuf/empty.proto";
import "pay/accounts/v1/accounts.proto";

// Service management provides functionality fo manage the platform.
service Accounts {
  // List all accounts created on the platform
  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse);

  // Delete an account from the platform.
  rpc DeleteAccount(accounts.v1.AccountRequest) returns (google.protobuf.Empty);
}

// List all accounts created on the platform.
message ListAccountsRequest {
  // Optional. The size of the page. The default is defined by the server.
  int32 page_size = 1;

  // Optional. The page token for requesting next pages.
  string page_token = 2;
}

// The response with all the accounts created on the platform.
message ListAccountsResponse {
  // The list of the accounts.
  repeated accounts.v1.Account accounts = 1;

  // The token to request the next page.
  string next_page_token = 2;
}
